2013-03-20         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Add AC_OUTPUT_COMMANDS that drops in a do-nothing
	Makefile for MirBSD, since the extensions can't be built on MirBSD.
	* configure: Regenerated.
	* Makefile.am (check-for-shared-lib-support): Update comment some.

2013-03-04         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c (fill_stat_array): Adjust computation for block
	count for WIN32 systems after consultation with Eli Zaretskii.

2013-02-26         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (check-recursive, all-recursive): Make dependant upon
	check-for-shared-lib-support.
	(check-for-shared-lib-support): New target. If gawk doesn't have the
	API built-in, don't try to build.

2013-02-11         Arnold D. Robbins     <arnold@skeeve.com>

	* fnmatch.c: Pull in versions of C routine from missing_d
	if the native system doesn't provide them.

2013-02-11         Eli Zaretskii	<eliz@gnu.org>

	* filefuncs.c (S_ISLNK, lstat, readlink, S_IRGRP, S_IWGRP, S_IXGRP,
	S_IROTH, S_IWOTH, S_IXOTH, S_ISUID, S_ISGID, S_ISVTX, major, minor):
	Define if needed.
	(fill_stat_array, init_filefuncs, func_table): Fix for Win 32.
	* time.c: Port to Win 32.

2013-01-27         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkdirfd.h: New file.
	* Makeile.am (filefuncs_la_SOURCES, readdir_la_SOURCES): Use it.
	* gawkfts.c, readdir.c: Include gawkdirfd.h.
	* configure.ac (AC_USE_SYSTEM_EXTENSIONS): Added.
	(GAWK_FUNC_DIRFD, GAWK_PREREQ_DIRFD): New calls.
	(.developing): Fix check.
	* alocal.m4: Updated.
	* configure: Regenerated.
	* gawkdirfd.h: Fixed for Mac OS X also.

2013-01-25         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkfts.c: Make include of <limits.h> be unconditional.

2013-01-22         Arnold D. Robbins     <arnold@skeeve.com>

	Improve portability. We hope.

	* gawkfts.c (S_ISREG): Define macro if not defined.
	(_BSD_SOURCE): Define for use with c99 compiler driver.