@@ -1757,7 +1757,7 @@ testext::
 readdir:
 	@echo $@
 	@$(AWK) -f $(srcdir)/readdir.awk $(top_srcdir) > _$@
-	@ls -fli $(top_srcdir) | sed 1d | $(AWK) -f $(srcdir)/readdir0.awk -v extout=_$@ > $@.ok
+	@ls -afli $(top_srcdir) | sed 1d | $(AWK) -f $(srcdir)/readdir0.awk -v extout=_$@ > $@.ok
 	@-$(CMP) $@.ok _$@ && rm -f $@.ok _$@
 
 fts:
