@@ -1,3 +1,10 @@
+2013-03-20         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (readdir): Add -a to ls options. -f does not
+	automatically mean -a on all systems.
+	* jarebug.sh: Send error output of locale to /dev/null in case
+	it doesn't exist.
+
 2013-03-11         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (colonwarn): New test.
