@@ -4,6 +4,7 @@
 	Makefile for MirBSD, since the extensions can't be built on MirBSD.
 	* configure: Regenerated.
 	* Makefile.am (check-for-shared-lib-support): Update comment some.
+	* gawkfts.c (MAX): Provide for systems that don't (Solaris).
 
 2013-03-04         Arnold D. Robbins     <arnold@skeeve.com>
 
